Include validation of the models
Models are first validated for syntax via taking the IE model from the
free sandbox and attempting to insert it into the validate sandbox.
Any schematic validation errors thrown by the database are displayed as
the syntax errors. Models are secondly validated for any logical
mistakes within the model; orphaned elements, missing ground element,
relationships which refer to unkown elements, unique
elements/relationships. Once a model has passed both validation
stages, it is inserted into the global model collection.

--- a/pbshm/ietools/templates/list-models.html
+++ b/pbshm/ietools/templates/list-models.html
@@ -15,6 +15,7 @@
             <th scope="col">Elements</th>
             <th scope="col">Relationships</th>
             <th scope="col"></th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
@@ -28,6 +29,11 @@
                 <td class="align-middle text-right">
                     <a href="{{ url_for('ie-tools.edit_model', id=model['id']) }}" class="btn btn-outline-info">
                         Edit
+                    </a>
+                </td>
+                <td class="align-middle text-right">
+                    <a href="{{ url_for('ie-tools.validate_model', population=model['population'], name=model['name'], timestamp=model['timestamp']) }}" class="btn btn-outline-info">
+                        Validate
                     </a>
                 </td>
             </tr>
