Include ability to upload JSON documents
For IE models which already exist as individual JSON documents,
include the ability to upload these via the interface.

--- a/pbshm/ietools/templates/list-models.html
+++ b/pbshm/ietools/templates/list-models.html
@@ -1,11 +1,38 @@
 {% extends 'portal.html'%}
 {% block title %}My Sandbox{% endblock %}
 {% block title_call_to_action %}
+<a href="#model-file-upload" class="btn btn-outline-secondary mr-3">
+    Upload Model
+</a>
 <a href="{{ url_for('ie-tools.edit_model') }}" class="btn btn-outline-info">
     Add model
 </a>
 {% endblock %}
 {% block content %}
+{% if errors|length > 0 %}
+<div class="card bg-danger text-white">
+    <div class="card-header">Error processing upload</div>
+    <div class="card-body">
+        <p class="card-text">{{ errors }}</p>
+    </div>
+</div>
+{% endif %}
+<div id="model-file-upload" class="card bg-light d-none my-2">
+    <dic class="card-header">IE Model Upload (JSON file)</dic>
+    <div class="card-body">
+        <form method="POST" enctype="multipart/form-data">
+            <div class="input-group d-flex">
+                <div class="custom-file flex-grow-1 ">
+                    <input type="file" name="model" accept="application/json" class="custom-file-input">
+                    <label for="model" class="custom-file-label">Select File</label>
+                </div>
+                <div class="input-group-append">
+                    <input type="submit" name="upload" value="Upload model" class="btn btn-secondary">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 <table class="table table-borderless table-hover mt-2">
     <thead class="bg-info text-white">
         <tr>
@@ -40,4 +67,19 @@
         {% endfor %}
     </tbody>
 </table>
+{% endblock %}
+{% block javascript %}
+    <script type="text/javascript">
+        $(document).ready(function (){
+            console.log("ran setup");
+            $("a[href='#model-file-upload']").click(function(){
+                console.log("clicked");
+                if($("#model-file-upload").hasClass("d-none")){
+                    $("#model-file-upload").removeClass("d-none");
+                }else{
+                    $("#model-file-upload").addClass("d-none");
+                }
+            });
+        });
+    </script>
 {% endblock %}
